crates/codira_codegen/src/snapshots/codira_codegen__test__string_literal_with_embedded_nul.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func awkward() -> str {\n        \"a\\0b\"\n    }\n    "
snapshot_kind: text
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]
@codira.str = private unnamed_addr constant [4 x i8] c"a\00b\00"

define { ptr, i64 } @awkward() {
body:
  ret { ptr, i64 } { ptr @codira.str, i64 3 }
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
