crates/codira_codegen/src/snapshots/codira_codegen__test__true_is_true.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func test_true() -> bool {\n        true\n    }\n\n    public func test_false() -> bool {\n        false\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i1 @test_true() local_unnamed_addr #0 {
body:
  ret i1 true
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i1 @test_false() local_unnamed_addr #0 {
body:
  ret i1 false
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
