crates/codira_codegen/src/snapshots/codira_codegen__test__tuple_expr.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func divmod(a: i32, b: i32) -> (i32, i32) {\n        (a / b, a % b)\n    }\n\n    public func first(t: (i32, f64)) -> i32 {\n        t.0\n    }\n\n    public func second(t: (i32, f64)) -> f64 {\n        t.1\n    }\n\n    public func nested(a: i32) -> i32 {\n        let t = ((a, a), a);\n        t.0.1\n    }\n\n    public func unit() -> () {\n        ()\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [4 x ptr]

define { i32, i32 } @divmod(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %div = sdiv i32 %a1, %b2
  %tuple_init = insertvalue { i32, i32 } undef, i32 %div, 0
  %a3 = load i32, ptr %a, align 4
  %b4 = load i32, ptr %b, align 4
  %rem = srem i32 %a3, %b4
  %tuple_init5 = insertvalue { i32, i32 } %tuple_init, i32 %rem, 1
  ret { i32, i32 } %tuple_init5
}

define i32 @first({ i32, double } %0) {
body:
  %t = alloca { i32, double }, align 8
  store { i32, double } %0, ptr %t, align 8
  %tuple.0 = getelementptr inbounds nuw { i32, double }, ptr %t, i32 0, i32 0
  %tuple.01 = load i32, ptr %tuple.0, align 4
  ret i32 %tuple.01
}

define double @second({ i32, double } %0) {
body:
  %t = alloca { i32, double }, align 8
  store { i32, double } %0, ptr %t, align 8
  %tuple.1 = getelementptr inbounds nuw { i32, double }, ptr %t, i32 0, i32 1
  %tuple.11 = load double, ptr %tuple.1, align 8
  ret double %tuple.11
}

define i32 @nested(i32 %0) {
body:
  %t = alloca { { i32, i32 }, i32 }, align 8
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %tuple_init = insertvalue { i32, i32 } undef, i32 %a1, 0
  %a2 = load i32, ptr %a, align 4
  %tuple_init3 = insertvalue { i32, i32 } %tuple_init, i32 %a2, 1
  %tuple_init4 = insertvalue { { i32, i32 }, i32 } undef, { i32, i32 } %tuple_init3, 0
  %a5 = load i32, ptr %a, align 4
  %tuple_init6 = insertvalue { { i32, i32 }, i32 } %tuple_init4, i32 %a5, 1
  store { { i32, i32 }, i32 } %tuple_init6, ptr %t, align 4
  %tuple.0 = getelementptr inbounds nuw { { i32, i32 }, i32 }, ptr %t, i32 0, i32 0
  %tuple.1 = getelementptr inbounds nuw { i32, i32 }, ptr %tuple.0, i32 0, i32 1
  %tuple.17 = load i32, ptr %tuple.1, align 4
  ret i32 %tuple.17
}

define void @unit() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [4 x ptr] zeroinitializer
