crates/codira_codegen/src/snapshots/codira_codegen__test__tuple_pattern.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func sum_pair(p: (i64, i64)) -> i64 {\n        let (x, y) = p;\n        x + y\n    }\n\n    public func destructured_param((a, b): (i64, i64)) -> i64 {\n        a + b\n    }\n\n    public func nested(v: ((i64, i64), i64)) -> i64 {\n        let ((p, q), r) = v;\n        p + q + r\n    }\n\n    public func discards(p: (i64, i64)) -> i64 {\n        let (_, keep) = p;\n        keep\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [3 x ptr]

define i64 @sum_pair({ i64, i64 } %0) {
body:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  %p = alloca { i64, i64 }, align 8
  store { i64, i64 } %0, ptr %p, align 4
  %p1 = load { i64, i64 }, ptr %p, align 4
  %tuple.0 = extractvalue { i64, i64 } %p1, 0
  store i64 %tuple.0, ptr %x, align 4
  %tuple.1 = extractvalue { i64, i64 } %p1, 1
  store i64 %tuple.1, ptr %y, align 4
  %x2 = load i64, ptr %x, align 4
  %y3 = load i64, ptr %y, align 4
  %add = add i64 %x2, %y3
  ret i64 %add
}

define i64 @destructured_param({ i64, i64 } %0) {
body:
  %b = alloca i64, align 8
  %a = alloca i64, align 8
  %tuple.0 = extractvalue { i64, i64 } %0, 0
  store i64 %tuple.0, ptr %a, align 4
  %tuple.1 = extractvalue { i64, i64 } %0, 1
  store i64 %tuple.1, ptr %b, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %add = add i64 %a1, %b2
  ret i64 %add
}

define i64 @nested({ { i64, i64 }, i64 } %0) {
body:
  %r = alloca i64, align 8
  %q = alloca i64, align 8
  %p = alloca i64, align 8
  %v = alloca { { i64, i64 }, i64 }, align 8
  store { { i64, i64 }, i64 } %0, ptr %v, align 4
  %v1 = load { { i64, i64 }, i64 }, ptr %v, align 4
  %tuple.0 = extractvalue { { i64, i64 }, i64 } %v1, 0
  %tuple.02 = extractvalue { i64, i64 } %tuple.0, 0
  store i64 %tuple.02, ptr %p, align 4
  %tuple.1 = extractvalue { i64, i64 } %tuple.0, 1
  store i64 %tuple.1, ptr %q, align 4
  %tuple.13 = extractvalue { { i64, i64 }, i64 } %v1, 1
  store i64 %tuple.13, ptr %r, align 4
  %p4 = load i64, ptr %p, align 4
  %q5 = load i64, ptr %q, align 4
  %add = add i64 %p4, %q5
  %r6 = load i64, ptr %r, align 4
  %add7 = add i64 %add, %r6
  ret i64 %add7
}

define i64 @discards({ i64, i64 } %0) {
body:
  %keep = alloca i64, align 8
  %p = alloca { i64, i64 }, align 8
  store { i64, i64 } %0, ptr %p, align 4
  %p1 = load { i64, i64 }, ptr %p, align 4
  %tuple.0 = extractvalue { i64, i64 } %p1, 0
  %tuple.1 = extractvalue { i64, i64 } %p1, 1
  store i64 %tuple.1, ptr %keep, align 4
  %keep2 = load i64, ptr %keep, align 4
  ret i64 %keep2
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [3 x ptr] zeroinitializer
