crates/codira_codegen/src/snapshots/codira_codegen__test__void_return.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    func bar() {\n        let a = 3;\n    }\n    public func foo(a:i32) {\n        let c = bar()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define void @bar() local_unnamed_addr #0 {
body:
  ret void
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define void @foo(i32 %0) local_unnamed_addr #0 {
body:
  ret void
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
